--- a/styles/style.css
+++ b/styles/style.css
@@ -9,17 +9,20 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
 }
 
 hr {
     border: 1p solid #D1D1D1;
+    margin-bottom: 27px;
 }
 
 /* top player style */
@@ -53,4 +56,46 @@ hr {
 .player-name {
     margin-left: 16px;
     font-size: 18px;
+}
+
+/* Top Blogs Styles */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+
+}
+
+.blog {
+    display: flex;
+    align-items: center;
+
+
+}
+
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 20px;
+    margin-bottom: 6px;
+    margin-top: 0;
+
+}
+
+.blog-author {
+    color: #9F9F9F;
+    font-size: 16px;
+}
+
+.blog-author a {
+    text-decoration: none;
+    color: #562EFF;
+    font-size: 16px;
 }
