--- a/styles/style.css
+++ b/styles/style.css
@@ -99,3 +99,51 @@ hr {
     color: #562EFF;
     font-size: 16px;
 }
+
+/* Courses styles */
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+
+
+}
+
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-author {
+    color: #ED6B4F;
+}
+
+.course-info {
+    display: flex;
+    width: 224px;
+    align-items: center;
+    justify-content: space-between;
+    line-height: 22px;
+
+}
+
+.fa-star {
+    font-size: 12px;
+
+}
+
+.fa-star.filled {
+    color: #FFC014;
+
+}
+
+.fa-star.empty {
+    color: #AEAEAE;
+
+}
+
+.course-duration {
+    color: #ED6B4F;
+    background-color: #FEE5DF;
+    border-radius: 12.6px;
+}
