--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
-/* Fonts */
+/*********************** 
+         Fonts 
+************************/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-/* Common Styles */
+/************************ 
+      Common Styles 
+*************************/
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
@@ -25,7 +29,9 @@ hr {
     margin-bottom: 27px;
 }
 
-/* top player style */
+/************************** 
+      top player style 
+***************************/
 .top-players {
     margin-bottom: 30px;
 }
@@ -58,7 +64,9 @@ hr {
     font-size: 18px;
 }
 
-/* Top Blogs Styles */
+/************************
+     Top Blogs Styles 
+ ************************/
 .blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -100,7 +108,9 @@ hr {
     font-size: 16px;
 }
 
-/* Courses styles */
+/*********************
+     Courses styles 
+***********************/
 .courses {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -146,4 +156,40 @@ hr {
     color: #ED6B4F;
     background-color: #FEE5DF;
     border-radius: 12.6px;
+}
+
+/*************************** 
+    Media Queries 
+****************************/
+/* Mobile Devices */
+@media only screen and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .player,
+    .blog,
+    .course {
+        flex-direction: column;
+
+    }
+}
+
+/* Tablet Divices */
+@media only screen and (min-width:687px) and (max-width: 992px) {
+
+    .container {
+        width: 100%;
+    }
+
+    .players {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
