--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,13 @@ hr {
 
     }
 
+    .courses {
+        display: grid;
+        align-items: center;
+        margin-left: 20%;
+    }
+
+
     .player,
     .blog,
     .course {
